main.css
:root {
    --blue: #AEC6C1;
    --black: #3C3C3C;
    --white: #FFFFFF;
    --tan: #DCDAC7;
    --dark-tan: #C8C6B5;
    --red: #D0725D;
}
html {
    background-color: var(--blue); /* sets scrollbar color in firefox */
    margin: 0;
    padding: 0;
    font-size: calc(18px + 0.5vw);
    font-family: 'Nunito', sans-serif;
}
body {
    margin: 0;
    padding: 0;
}
.app-wrapper {
    height: 100vh;
    width: 100vw;
    background-color: var(--tan);
    color: var(--black);
    display: grid;
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 1fr;
    grid-template-areas:
        "header"
        "main"
        "footer";
}
.app-wrapper.dark {
    background-color: var(--black);
    color: var(--white);
}
label {
    text-align: left;
    display: block;
    font-size: 20px;
}
input {
    padding: 10px 10px 10px 10px;
    border: none;
    appearance: none;
    font-size: 20px;
    -webkit-appearance: none;
    -moz-appearance: none;
}
fieldset {
    border: rgba(255,255,255,0.2) 3px solid;
    margin:0;
    padding:12px;
}
legend {
    font-weight: bold;
}
form {
    width: calc(100% - 24px);
    margin-left: 12px;
    margin-right: 12px;
}
form table {
    margin-left: auto;
    margin-right: auto;
}
.app-wrapper.dark input[class="text"] {
    background-color: var(--dark-tan);
    color: var(--black);
}
input[class="text"] {
    background-color: var(--tan);
    color: var(--black);
    border-radius: 10px;
    margin-bottom: 12px;
    width:100%;
    box-sizing:border-box;
}
input[class="button"] {
    background-color: var(--blue);
    color: var(--black);
    border-radius: 999px;
    font-weight: bold;
    padding-left: 25px;
    padding-right: 25px;
    width: 100%;
    margin-top: 12px;
    margin-bottom: 12px;
    box-sizing:border-box;
}
header {
    grid-area: header;
    background-color: rgba(255, 255, 255, 0.2);
    padding-top: 12px;
    padding-bottom: 12px;
}
.app-wrapper.dark header {
    background-color: rgba(0, 0, 0, 0.2);
}
main {
    grid-area: main;
    overflow-x: hidden;
    overflow-y: auto;
}
.form-msg {
    margin-bottom: 12px;
    text-align: center;
}
.debug-msg {
    font-size: 10px;
    opacity: 0.5;
    text-align: center;
}
.form-wrapper {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.app-wrapper.dark footer {
    background-color: rgba(0, 0, 0, 0.2);
}
footer {
    grid-area: footer;
    background-color: rgba(255, 255, 255, 0.2);
    padding-top: 12px;
    padding-bottom: 12px;
}
p {
    font-family: 'Nunito', sans-serif;
    line-height: 1.4;
}
h1 {
    text-align: center;
    font-size: 32px;
}
p,h1,h2,h3,h4,h5,h6 {
    margin: 0;
}

